# ha-integration-bbox

./: .gitignore  README.md  docker-compose.yaml  hacs.json  pyproject.toml
.github/workflows/: release.yml
custom_components/bbox/: __init__.py  config_flow.py  const.py  coordinator.py  device_tracker.py  helpers.py  manifest.json  model.py
custom_components/bbox/translations/: en.json  fr.json
scripts/: release.py
